# templates

./: LICENSE  README.md  c_cpp_properties.json
cpp-cmake/: CMakeLists.txt
cpp-cmake-old/: CMakeLists.txt  Makefile
cpp-cmake-sharedlib-tests/: CMakeLists.txt  Makefile  test.cmake
cpp-cmake-sharedlib-tests/test/: AssertionFailure.hpp  main.cpp  testlib.hpp
cpp-cmake-sharedlib-tests/test/Tests/: tests.hpp
haskell-cabal/: hie.yaml  project.cabal
haskell-cabal/.github/workflows/: cabal-build.yml
pros-v5/: .ccls  Makefile  new.sh  project.pros
pros-v5/src/: main.cpp
